--- a/marketing/index.html
+++ b/marketing/index.html
@@ -1,86 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nails Come to You - Marketing</title>
-    <style>
-      body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: #fff;
-        color: #222;
-      }
-      header, nav, main, footer {
-        max-width: 100vw;
-        box-sizing: border-box;
-      }
-      nav {
-        background: #f7c6c7;
-        padding: 1em 2vw;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 2vw;
-      }
-      nav a {
-        color: #6b1839;
-        text-decoration: none;
-        font-weight: bold;
-        padding: 0.5em 1vw;
-        border-radius: 4px;
-      }
-      nav a:focus, nav a:hover {
-        background: #ffd6e0;
-        outline: 2px solid #6b1839;
-      }
-      main {
-        padding: 2vw;
-      }
-      img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-      }
-      h1, h2, h3 {
-        margin-top: 2vw;
-      }
-      footer {
-        background: #f7c6c7;
-        color: #6b1839;
-        text-align: center;
-        padding: 1em 2vw;
-        font-size: 0.9em;
-      }
-      @media (max-width: 400px) {
-        nav, main, footer {
-          padding: 1vw;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/index.html">Home</a>
-        <a href="/marketing/index.html">Marketing</a>
-        <a href="/marketing/features.html">Features</a>
-        <a href="/marketing/pricing.html">Pricing</a>
-      </nav>
-    </header>
-    <main>
-      <h1>Welcome to Nails Come to You</h1>
-      <p>Your premier mobile nail service. We bring salon quality and relaxation right to your doorstep.</p>
-      <img src="https://via.placeholder.com/600x300?text=Nail+Art" alt="Beautiful nail art sample">
-      <h2>Why Choose Us?</h2>
-      <ul>
-        <li>Professional technicians</li>
-        <li>Top-quality products</li>
-        <li>Flexible scheduling</li>
-        <li>Safe, hygienic practices</li>
-      </ul>
-    </main>
-    <footer>
-      &copy; 2025 Nails Come to You. All Rights Reserved.
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Nails Come to You | Mobile Nail & Spa Marketing</title>
+  <meta name="description" content="Discover Nails Come to You's mobile nail service and spa treatments. Beauty and relaxation delivered to your door.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../css/main.css">
+</head>
+<body>
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
+    <img src="../smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" style="height:40px;">
+    <nav>
+      <a href="../index.html" class="btn-primary">Home</a>
+      <a href="index.html" class="btn-primary">Marketing</a>
+      <a href="features.html" class="btn-primary">Features</a>
+      <a href="pricing.html" class="btn-primary">Pricing</a>
+      <a href="../contact.html" class="btn-primary">Contact</a>
+    </nav>
+  </div>
+  <h1>Mobile Beauty Delivered to You</h1>
+  <img src="../gallery/featured1.jpg" alt="Mobile nail service promo" style="width:100%;max-width:600px;display:block;margin:0 auto 20px;">
+  <p>
+    Experience luxury nail care and spa treatments in the comfort of your home. Our professional technicians bring top-quality products, creative nail art, and relaxing spa services right to you.
+  </p>
+  <ul>
+    <li>Book online—easy scheduling</li>
+    <li>Safe, hygienic protocols</li>
+    <li>Personalized nail art & spa packages</li>
+  </ul>
+  <p>
+    <a href="../services.html" class="btn-primary">Explore Full Services</a>
+  </p>
+  <p>&copy; 2025 Nails Come to You. All Rights Reserved.</p>
+</body>
 </html>
