--- a/marketing/features.html
+++ b/marketing/features.html
@@ -1,87 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nails Come to You - Features</title>
-    <style>
-      /* Same styles as marketing/index.html for consistency */
-      body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: #fff;
-        color: #222;
-      }
-      header, nav, main, footer {
-        max-width: 100vw;
-        box-sizing: border-box;
-      }
-      nav {
-        background: #f7c6c7;
-        padding: 1em 2vw;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 2vw;
-      }
-      nav a {
-        color: #6b1839;
-        text-decoration: none;
-        font-weight: bold;
-        padding: 0.5em 1vw;
-        border-radius: 4px;
-      }
-      nav a:focus, nav a:hover {
-        background: #ffd6e0;
-        outline: 2px solid #6b1839;
-      }
-      main {
-        padding: 2vw;
-      }
-      img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-      }
-      h1, h2, h3 {
-        margin-top: 2vw;
-      }
-      footer {
-        background: #f7c6c7;
-        color: #6b1839;
-        text-align: center;
-        padding: 1em 2vw;
-        font-size: 0.9em;
-      }
-      @media (max-width: 400px) {
-        nav, main, footer {
-          padding: 1vw;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/index.html">Home</a>
-        <a href="/marketing/index.html">Marketing</a>
-        <a href="/marketing/features.html">Features</a>
-        <a href="/marketing/pricing.html">Pricing</a>
-      </nav>
-    </header>
-    <main>
-      <h1>Our Features</h1>
-      <h2>At-Home Service</h2>
-      <p>Enjoy salon-quality nail care in the comfort of your home—no driving, no waiting.</p>
-      <img src="https://via.placeholder.com/400x200?text=Home+Service" alt="Technician providing nail service at home">
-      <h2>Wide Range of Styles</h2>
-      <p>From classic manicures to stunning nail art, we offer a variety of styles for every taste.</p>
-      <h2>Sanitation & Safety</h2>
-      <p>We follow strict hygiene protocols for your safety and peace of mind.</p>
-      <h2>Easy Booking</h2>
-      <p>Book online or via phone—choose the time and date that works for you.</p>
-    </main>
-    <footer>
-      &copy; 2025 Nails Come to You. All Rights Reserved.
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Nails Come to You | Features</title>
+  <meta name="description" content="Discover the unique features of Nails Come to You mobile nail and spa services.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../css/main.css">
+</head>
+<body>
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
+    <img src="../smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" style="height:40px;">
+    <nav>
+      <a href="../index.html" class="btn-primary">Home</a>
+      <a href="index.html" class="btn-primary">Marketing</a>
+      <a href="features.html" class="btn-primary">Features</a>
+      <a href="pricing.html" class="btn-primary">Pricing</a>
+      <a href="../gallery.html" class="btn-primary">Gallery</a>
+    </nav>
+  </div>
+  <h1>Why Clients Love Us</h1>
+  <img src="../gallery/featured2.jpg" alt="Smiling customer with fresh nails" style="width:100%;max-width:600px;display:block;margin:0 auto 20px;">
+  <ul>
+    <li><strong>On-Demand Appointments:</strong> Schedule when it suits you—online or by phone.</li>
+    <li><strong>Sanitation First:</strong> All tools and products sterilized for your safety.</li>
+    <li><strong>Expert Technicians:</strong> Licensed professionals with experience in nail art and spa treatments.</li>
+    <li><strong>Custom Nail Art:</strong> Choose from classic or trendy designs, or request your own.</li>
+    <li><strong>Spa Packages:</strong> Combine services for a truly pampering experience.</li>
+  </ul>
+  <p>
+    <a href="../gallery.html" class="btn-primary">See Our Work</a>
+  </p>
+  <p>&copy; 2025 Nails Come to You. All Rights Reserved.</p>
+</body>
 </html>
