--- a/marketing/pricing.html
+++ b/marketing/pricing.html
@@ -1,119 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nails Come to You - Pricing</title>
-    <style>
-      /* Same styles as marketing/index.html for consistency */
-      body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: #fff;
-        color: #222;
-      }
-      header, nav, main, footer {
-        max-width: 100vw;
-        box-sizing: border-box;
-      }
-      nav {
-        background: #f7c6c7;
-        padding: 1em 2vw;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 2vw;
-      }
-      nav a {
-        color: #6b1839;
-        text-decoration: none;
-        font-weight: bold;
-        padding: 0.5em 1vw;
-        border-radius: 4px;
-      }
-      nav a:focus, nav a:hover {
-        background: #ffd6e0;
-        outline: 2px solid #6b1839;
-      }
-      main {
-        padding: 2vw;
-      }
-      img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-      }
-      h1, h2, h3 {
-        margin-top: 2vw;
-      }
-      footer {
-        background: #f7c6c7;
-        color: #6b1839;
-        text-align: center;
-        padding: 1em 2vw;
-        font-size: 0.9em;
-      }
-      @media (max-width: 400px) {
-        nav, main, footer {
-          padding: 1vw;
-        }
-      }
-      table {
-        width: 90vw;
-        max-width: 600px;
-        margin: 2vw auto;
-        border-collapse: collapse;
-      }
-      th, td {
-        padding: 1vw;
-        border: 1px solid #6b1839;
-        text-align: left;
-        background: #fff;
-      }
-      th {
-        background: #ffd6e0;
-        color: #6b1839;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/index.html">Home</a>
-        <a href="/marketing/index.html">Marketing</a>
-        <a href="/marketing/features.html">Features</a>
-        <a href="/marketing/pricing.html">Pricing</a>
-      </nav>
-    </header>
-    <main>
-      <h1>Pricing</h1>
-      <p>Transparent and affordable pricing for every service.</p>
-      <table>
-        <tr>
-          <th>Service</th>
-          <th>Price</th>
-        </tr>
-        <tr>
-          <td>Basic Manicure</td>
-          <td>$25</td>
-        </tr>
-        <tr>
-          <td>Gel Manicure</td>
-          <td>$35</td>
-        </tr>
-        <tr>
-          <td>Deluxe Nail Art</td>
-          <td>$40</td>
-        </tr>
-        <tr>
-          <td>Pedicure</td>
-          <td>$30</td>
-        </tr>
-      </table>
-      <p>Contact us for custom packages and group rates!</p>
-      <img src="https://via.placeholder.com/400x200?text=Pricing" alt="Pricing chart">
-    </main>
-    <footer>
-      &copy; 2025 Nails Come to You. All Rights Reserved.
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Nails Come to You | Pricing</title>
+  <meta name="description" content="Transparent pricing for mobile nail and spa services. Custom packages available.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../css/main.css">
+</head>
+<body>
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
+    <img src="../smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" style="height:40px;">
+    <nav>
+      <a href="../index.html" class="btn-primary">Home</a>
+      <a href="index.html" class="btn-primary">Marketing</a>
+      <a href="features.html" class="btn-primary">Features</a>
+      <a href="pricing.html" class="btn-primary">Pricing</a>
+      <a href="../contact.html" class="btn-primary">Contact</a>
+    </nav>
+  </div>
+  <h1>Pricing</h1>
+  <img src="../gallery/featured3.jpg" alt="Pricing chart for nail services" style="width:100%;max-width:600px;display:block;margin:0 auto 20px;">
+  <table style="width:100%;max-width:600px;margin:0 auto 20px;border-collapse:collapse;">
+    <tr>
+      <th style="padding:8px;border:1px solid #e5b3be;background:#f7c6c7;">Service</th>
+      <th style="padding:8px;border:1px solid #e5b3be;background:#f7c6c7;">Price</th>
+    </tr>
+    <tr>
+      <td style="padding:8px;border:1px solid #e5b3be;">Basic Manicure</td>
+      <td style="padding:8px;border:1px solid #e5b3be;">$25</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;border:1px solid #e5b3be;">Gel Manicure</td>
+      <td style="padding:8px;border:1px solid #e5b3be;">$35</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;border:1px solid #e5b3be;">Deluxe Nail Art</td>
+      <td style="padding:8px;border:1px solid #e5b3be;">$40</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;border:1px solid #e5b3be;">Pedicure</td>
+      <td style="padding:8px;border:1px solid #e5b3be;">$30</td>
+    </tr>
+  </table>
+  <p style="text-align:center;">Contact us for custom packages and group rates!</p>
+  <p>&copy; 2025 Nails Come to You. All Rights Reserved.</p>
+</body>
 </html>
