--- a/marketing/features.html
+++ b/marketing/features.html
@@ -19,7 +19,7 @@
     </nav>
   </div>
   <h1>Why Clients Love Us</h1>
-  <img src="../gallery/featured2.jpg" alt="Smiling customer with fresh nails" style="width:100%;max-width:600px;display:block;margin:0 auto 20px;">
+  <img src="../images/pinkpinknails.jpg" alt="Pink nails with art, pricing highlight" style="width:100%;max-width:600px;display:block;margin:0 auto 20px;">
   <ul>
     <li><strong>On-Demand Appointments:</strong> Schedule when it suits you—online or by phone.</li>
     <li><strong>Sanitation First:</strong> All tools and products sterilized for your safety.</li>
