--- a/marketing/pricing.html
+++ b/marketing/pricing.html
@@ -19,7 +19,7 @@
     </nav>
   </div>
   <h1>Pricing</h1>
-  <img src="../gallery/featured3.jpg" alt="Pricing chart for nail services" style="width:100%;max-width:600px;display:block;margin:0 auto 20px;">
+  <img src="../images/pinkpinknails.jpg" alt="Pink nails with art, pricing highlight" style="width:100%;max-width:600px;display:block;margin:0 auto 20px;">
   <table style="width:100%;max-width:600px;margin:0 auto 20px;border-collapse:collapse;">
     <tr>
       <th style="padding:8px;border:1px solid #e5b3be;background:#f7c6c7;">Service</th>
