--- a/template.html
+++ b/template.html
@@ -2,6 +2,17 @@
 <html>
   <head>
     <title>Nails Come to You - Template</title>
+    <meta name="description" content="Nails Come to You - On-demand nail services delivered to your location. Experience personalized nail care at your convenience.">
+    <meta name="robots" content="index,follow">
+    <meta name="google-site-verification" content="YUBJ_IoFnoXdVTgkuZZFpF9sBQOQIhpn_segnwldXKo" />
+    <!-- Google Analytics 4 (GA-4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-BRDWD2NNK6');
+    </script>
   </head>
   <body>
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
