--- a/about.html
+++ b/about.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <title>About | Mobile Nail Services in Greeley, CO | Nails Come to You</title>
   <meta name="description" content="Learn more about Nails Come to You, a mobile nail salon proudly serving Greeley, CO since July 2025. Discover our experience, mission, and commitment to the best nail care and customer service.">
+  <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="YUBJ_IoFnoXdVTgkuZZFpF9sBQOQIhpn_segnwldXKo" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-XXXXXXXXX-X');
+    gtag('config', 'G-BRDWD2NNK6');
   </script>
 </head>
 <body>
