--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <title>Contact | Book Mobile Nail Services in Greeley, CO | Nails Come to You</title>
   <meta name="description" content="Contact Nails Come to You in Greeley, CO. Call, text, or message to book your next mobile nail appointment. Reach out for the best prices and services in town!">
+  <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="YUBJ_IoFnoXdVTgkuZZFpF9sBQOQIhpn_segnwldXKo" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-XXXXXXXXX-X');
+    gtag('config', 'G-BRDWD2NNK6');
   </script>
 </head>
 <body>
