--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Nail Art Gallery | Portfolio of Designs in Greeley, CO | Nails Come to You</title>
   <meta name="description" content="Browse the gallery of stunning nail designs and art by Nails Come to You. See examples of pink, red, and white nails. Mobile nail services in Greeley, CO. Book your appointment today!">
+  <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="YUBJ_IoFnoXdVTgkuZZFpF9sBQOQIhpn_segnwldXKo" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
   <style>
@@ -93,13 +95,13 @@
       margin-top: 2em;
     }
   </style>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-XXXXXXXXX-X');
+    gtag('config', 'G-BRDWD2NNK6');
   </script>
 </head>
 <body>
