--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <title>Nails Come to You | Mobile Nail Services | Home</title>
   <meta name="description" content="Nails Come to You offers premium mobile nail services for self-care, beauty, and confidence. Book your appointment and experience luxury nail treatments at your location today!">
+  <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="YUBJ_IoFnoXdVTgkuZZFpF9sBQOQIhpn_segnwldXKo" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-XXXXXXXXX-X');
+    gtag('config', 'G-BRDWD2NNK6');
   </script>
 </head>
 <body>
