--- a/services.html
+++ b/services.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Mobile Nail Services & Spa Treatments | Nails Come to You</title>
   <meta name="description" content="Discover our full range of mobile nail services, spa treatments, nail art, and self-care consultations. Book an appointment with Nails Come to You for beauty and relaxation delivered to your door.">
+  <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="YUBJ_IoFnoXdVTgkuZZFpF9sBQOQIhpn_segnwldXKo" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
   <style>
@@ -21,13 +23,13 @@
       display: block;
     }
   </style>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-XXXXXXXXX-X');
+    gtag('config', 'G-BRDWD2NNK6');
   </script>
 </head>
 <body>
