--- a/prosite/index.html
+++ b/prosite/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Mountain Bean Café – Colorado’s Roasted Perfection</title>
+  <meta name="description" content="Breathe in the mountain air and awaken your senses at Mountain Bean Café. Discover our locally roasted coffee, crafted for hikers and explorers.">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="preload" href="../fonts/yourfont.woff2" as="font" type="font/woff2" crossorigin>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'YOUR-GA-ID');
+  </script>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="subscription.html">Subscription</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="hero" style="background: url('../images/coffeeshopview.jpg') center/cover no-repeat; padding: 7rem 2rem; color: #fff; text-shadow: 1px 1px 8px #000;">
+      <h1>Mountain Bean Café</h1>
+      <h2>Colorado’s Roasted Perfection</h2>
+      <p>From trailhead to tastebud, our coffee fuels your adventure.</p>
+      <a href="subscription.html" class="btn-primary">Subscribe Now</a>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Mountain Bean Café | Crafted by JasminMazaRod</p>
+  </footer>
+</body>
+</html>
