--- a/prosite/about.html
+++ b/prosite/about.html
@@ -1,1 +1,53 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About – Mountain Bean Café</title>
+  <meta name="description" content="Learn about Mountain Bean Café’s origin story and the passionate team behind Colorado’s favorite coffee roaster.">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="preload" href="../fonts/yourfont.woff2" as="font" type="font/woff2" crossorigin>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'YOUR-GA-ID');
+  </script>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="subscription.html">Subscription</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h1>Our Origin Story</h1>
+      <h2>From Problem to Promise</h2>
+      <!-- Problem Paragraph -->
+      <p>
+        After long hikes in Colorado’s rugged mountains, we noticed one thing missing from every trailhead—a place for adventurers to unwind with truly great coffee. Big chains felt impersonal, and small shops rarely roasted their own beans. Locals and tourists alike wanted a cup that matched the spirit of the Rockies.
+      </p>
+      <!-- Promise Paragraph -->
+      <p>
+        That’s why we founded Mountain Bean Café. Starting with a single roaster and a dream, we built a community hub where every cup is crafted from beans roasted on-site, served by staff who know your name and your favorite trail. Today, we’re proud to fuel hikers, climbers, and explorers with authentic Colorado flavor—and invite you to join our journey.
+      </p>
+      <figure>
+        <img src="../images/coffeeshop.jpg" alt="Mountain Bean Café staff smiling behind the counter, ready to welcome hikers and locals" width="400">
+        <figcaption>Meet the Mountain Bean team—your Colorado coffee guides!</figcaption>
+      </figure>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Mountain Bean Café | Crafted by JasminMazaRod</p>
+  </footer>
+</body>
+</html>
