--- a/prosite/about.html
+++ b/prosite/about.html
@@ -7,13 +7,13 @@
   <meta name="description" content="Learn about Mountain Bean Café’s origin story and the passionate team behind Colorado’s favorite coffee roaster.">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="preload" href="../fonts/yourfont.woff2" as="font" type="font/woff2" crossorigin>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'YOUR-GA-ID');
+    gtag('config', 'G-BRDWD2NNK6');
   </script>
 </head>
 <body>
