--- a/prosite/subscription.html
+++ b/prosite/subscription.html
@@ -1,1 +1,78 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Subscription Plans – Mountain Bean Café</title>
+  <meta name="description" content="Subscribe to Mountain Bean Café for fresh Colorado-roasted coffee delivered to your door. Choose your plan and fuel your next adventure!">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="preload" href="../fonts/yourfont.woff2" as="font" type="font/woff2" crossorigin>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-BRDWD2NNK6');
+  </script>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="subscription.html">Subscription</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h1>Subscription Plans</h1>
+      <p>
+        Experience Colorado’s best coffee—delivered fresh to your door. Our monthly subscriptions are designed to fuel every adventure, from local trail runs to mountain summit expeditions. Choose your plan and never miss a morning in the wild!
+      </p>
+      <table class="pricing-table" style="width:100%;border-collapse:collapse;">
+        <thead>
+          <tr>
+            <th>Plan</th>
+            <th>Price</th>
+            <th>Features</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Trailhead Starter</td>
+            <td>$15/mo</td>
+            <td>1 bag/month, free local pickup, exclusive trail tips</td>
+          </tr>
+          <tr>
+            <td>Summit Explorer</td>
+            <td>$27/mo</td>
+            <td>2 bags/month, nationwide shipping, limited-edition blends</td>
+          </tr>
+          <tr>
+            <td>Peak Enthusiast</td>
+            <td>$39/mo</td>
+            <td>3 bags/month, priority shipping, member mug, birthday gift</td>
+          </tr>
+          <tr>
+            <td>Group Expedition</td>
+            <td>$75/mo</td>
+            <td>6 bags/month, group perks, event invites, partner discounts</td>
+          </tr>
+        </tbody>
+      </table>
+      <p>
+        Ready to join the Mountain Bean family? Subscribers enjoy fresh-roasted beans, member rewards, and coffee you can count on—no matter where your journey leads.
+      </p>
+      <a href="mailto:info@mountainbean.com?subject=Subscribe%20Me" class="btn-primary">Subscribe now</a>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Mountain Bean Café | Crafted by JasminMazaRod</p>
+  </footer>
+</body>
+</html>
