--- a/prosite/test.html
+++ b/prosite/test.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Test Page – Mountain Bean Café</title>
+  <meta name="description" content="This is a test page for Mountain Bean Café site development.">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="preload" href="../fonts/yourfont.woff2" as="font" type="font/woff2" crossorigin>
+  <!-- Google Analytics 4 (GA-4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRDWD2NNK6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-BRDWD2NNK6');
+  </script>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="subscription.html">Subscription</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>Test Page</h1>
+    <p>This is a test page for development and troubleshooting.</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 Mountain Bean Café | Crafted by JasminMazaRod</p>
+  </footer>
+</body>
+</html>
